# wormhole-circle-integration

solana/: Cargo.toml  Makefile
solana/modules/wormhole-cctp/: Cargo.toml
solana/modules/wormhole-cctp/src/cctp/message_transmitter_program/: mod.rs
solana/modules/wormhole-cctp/src/cctp/message_transmitter_program/cpi/receive_message/: token_messenger_minter.rs
solana/modules/wormhole-cctp/src/cctp/token_messenger_minter_program/: mod.rs
solana/modules/wormhole-cctp/src/cctp/token_messenger_minter_program/cpi/: deposit_for_burn_with_caller.rs
solana/modules/wormhole-cctp/src/wormhole/: mod.rs
solana/modules/wormhole-cctp/src/wormhole/core_bridge_program/: mod.rs
solana/modules/wormhole-cctp/src/wormhole/core_bridge_program/cpi/: post_message.rs
solana/programs/circle-integration/: Cargo.toml
solana/programs/circle-integration/src/: lib.rs
solana/programs/circle-integration/src/processor/governance/: register_emitter_and_domain.rs  upgrade_contract.rs
