[package]
name = "wormhole-cctp-solana"
description = "Wormhole CCTP Utilities for Solana"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
client = []
cpi = ["dep:anchor-spl"]
testnet = ["wormhole-solana-consts/testnet", "wormhole-solana-vaas/testnet"]
localnet = ["wormhole-solana-consts/mainnet", "wormhole-solana-vaas/mainnet"]

[dependencies]
wormhole-io.workspace = true
wormhole-raw-vaas.workspace = true

wormhole-solana-consts.workspace = true
wormhole-solana-vaas.workspace = true

anchor-lang.workspace = true
anchor-spl = { optional = true, workspace = true }

hex.workspace = true
ruint.workspace = true

cfg-if.workspace = true

[dev-dependencies]
hex-literal.workspace = true